syntax = "proto3";

package rivet.backend.chat;

import "proto/common.proto";
import "proto/backend/party.proto";

message Message {
	rivet.common.Uuid chat_message_id = 1;
	rivet.common.Uuid thread_id = 2;
	int64 send_ts = 3;
	MessageBody body = 4;
}

message MessageBody {
	message Custom {
		rivet.common.Uuid sender_user_id = 1;
		rivet.common.Uuid plugin_id = 2;
		bytes body = 3;
	}

	message Text {
		rivet.common.Uuid sender_user_id = 1;
		string body = 2;
	}

	message ChatCreate {

	}

	message Deleted {
		rivet.common.Uuid sender_user_id = 1;
	}

	message UserFollow {

	}

	message TeamJoin {
		rivet.common.Uuid user_id = 1;
	}

	message TeamLeave {
		rivet.common.Uuid user_id = 1;
	}

	message TeamMemberKick {
		rivet.common.Uuid user_id = 1;
	}

	message PartyInvite {
		rivet.common.Uuid sender_user_id = 1;
		rivet.common.Uuid party_id = 2;
		rivet.common.Uuid invite_id = 3;
		string invite_token = 4;
	}

	message PartyJoinRequest {
		rivet.common.Uuid sender_user_id = 1;
	}

	message PartyJoin {
		rivet.common.Uuid user_id = 1;
	}

	message PartyLeave {
		rivet.common.Uuid user_id = 1;
	}

	message PartyActivityChange {
		// Nullable for idle
		oneof state {
			backend.party.Party.StateMatchmakerFindingLobby matchmaker_finding_lobby = 101;
			backend.party.Party.StateMatchmakerLobby matchmaker_lobby = 102;
		}
	}

	oneof kind {
		Custom custom = 1;
		Text text = 2;
		ChatCreate chat_create = 3;
		Deleted deleted = 4;

		UserFollow user_follow = 101;

		TeamJoin team_join = 201;
		TeamLeave team_leave = 202;
		TeamMemberKick team_member_kick = 203;

		PartyInvite party_invite = 301;
		PartyJoinRequest party_join_request = 305;
		PartyJoin party_join = 302;
		PartyLeave party_leave = 303;
		PartyActivityChange party_activity_change = 304;
	}
}

message Thread {
	rivet.common.Uuid thread_id = 1;
	int64 create_ts = 2;
	Topic topic = 3;
}

message Topic {
	message Direct {
		rivet.common.Uuid user_a_id = 1;
		rivet.common.Uuid user_b_id = 2;
	}

	message Team {
		rivet.common.Uuid team_id = 1;
	}

	message Party {
		rivet.common.Uuid party_id = 1;
	}

	oneof kind {
		Team team = 1;
		Party party = 2;
		Direct direct = 3;
	}
}

message Direct {
	rivet.common.Uuid user_a_id = 1;
	rivet.common.Uuid user_b_id = 2;
	int64 create_ts = 3;
}

message TypingStatus {
	message Idle {

	}
	
	message Typing {

	}

	oneof kind {
		Idle idle = 1;
		Typing typing = 2;
	}
}
