syntax = "proto3";

package rivet.backend.pkg.party.msg.create;

import "proto/common.proto";
import "proto/backend/party.proto";
import "proto/backend/net.proto";

/// name = "msg-party-create"
/// parameters = [
/// 	{ name = "party_id" },
/// ]
message Message {
	message Publicity {
		optional rivet.backend.party.Party.PublicityLevel public = 1;
		optional rivet.backend.party.Party.PublicityLevel friends = 2;
		optional rivet.backend.party.Party.PublicityLevel teams = 3;
	}

	message StateMatchmakerLobby {
		rivet.common.Uuid namespace_id = 1;
		rivet.common.Uuid lobby_id = 2;
		rivet.common.Uuid leader_player_id = 3;
		string leader_player_token = 4;
	}

	rivet.common.Uuid party_id = 1;
	rivet.common.Uuid leader_user_id = 2;
	uint32 party_size = 3;
	Publicity publicity = 4;
	optional rivet.backend.net.ClientInfo client = 5;

	// Optional
	oneof initial_state {
		StateMatchmakerLobby matchmaker_lobby = 101;
	};
}

